# qhull

./: .gitignore  ChangeLog copy.md  ChangeLog.md  README.md  cabal.project  package.yaml.versuch  qhull copy.cabal.copy from   qhull.cabal  stack.yaml
C/: convexhull.c  delaunay.c  halfspaces.c
Cdir/: delaunay.c  delaunay.h
Rplots/: voronoi_circle00.R  voronoi_randomInSquare00.R  voronoi_waves2D.R
hsc/: convexhull.h  convexhull.hsc  delaunay.h  delaunay.hs  delaunay.hsc
rgl/: convexhull00.R  convexhull04.R  convexhull_curveOnSphere.R  convexhull_curveOnSphere2.R  convexhull_curveOnSphere3.R  convexhull_curveOnTorus.R  convexhull_teapot.R  delaunay_sphere.R  delaunay_torus00.R  voronoi_centricCuboctahedron.R  voronoi_centricDodecahedron.R  voronoi_centricRhombicDodecahedron.R  voronoi_curve3D.R  voronoi_curve3Dtorus.R  voronoi_multicube.R  voronoi_projhcube4.R  voronoi_randomInCube00.R  voronoi_sphere.R  voronoi_teapot.R  voronoi_teapot_iterated.R  voronoi_torus00.R
src/: ConvexHull.hs  Delaunay.hs  HalfSpaces.hs  Voronoi.hs  Voronoi2D.hs  Voronoi3D.hs
src-exe/Adjacency/: AdjacencyMatrix.hs  Read.hs  squares
src-exe/ConvexHull/: Main.hs
src-exe/Delaunay/: Main.hs  rhombicDodecahedron.hs
src-exe/HalfSpaces/: Main.hs
src-exe/Voronoi/: Main.hs
src/ConvexHull/: BiTruncatedTesseract.hs  CConvexHull.hs  ConvexHull.hs  Examples.hs  OmniTruncated120Cell.hs  R.hs  Truncated120Cell.hs  Truncated120Cell2.hs  Truncated120Cell3.hs  Types.hs
src/ConvexHull/CantiTrunc600Cell/: Data.hs
src/ConvexHull/SnubDodecahedron/: SnubDodecahedron.hs
src/Delaunay/: Adjacency.hs  CDelaunay.hs  Delaunay.hs  Examples.hs  R.hs  Types.hs
src/HalfSpaces/: CHalfSpaces.hs  Constraint.hs  Examples.hs  HalfSpaces.hs  Internal.hs  LinearCombination.hs  ToySolver.hs
src/Qhull/: Shared.hs  Types.hs
src/Voronoi/: R.hs  Shared.hs  Voronoi.hs
