name:                qhull
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/qhull#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description:
    Build the executables.
  default: False
flag exe-delaunay
  default: False
flag exe-voronoi
  default: False
flag exe-hull
  default: False
flag exe-hs
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Delaunay
                     , Delaunay.Delaunay
                     , Delaunay.CDelaunay
                     , Delaunay.Types
                     , Delaunay.R
                     , Delaunay.Examples
                     , Voronoi2D
                     , Voronoi3D
                     , Voronoi.Voronoi
                     , Voronoi.R
                     , Voronoi.Shared
                     , ConvexHull
                     , ConvexHull.ConvexHull
                     , ConvexHull.CConvexHull
                     , ConvexHull.Types
                     , ConvexHull.R
                     , ConvexHull.Examples
                     , Qhull.Types
                     , Qhull.Shared
                     , HalfSpaces.LinearCombination
                     , HalfSpaces.Constraint
                     , HalfSpaces.Internal
                     , HalfSpaces.ToySolver
                     , HalfSpaces.CHalfSpaces
                     , HalfSpaces.HalfSpaces
                     , HalfSpaces.Examples
                     , HalfSpaces
                     , ConvexHull.Truncated120Cell3
                     , ConvexHull.CantiTrunc600Cell.Data
                     , ConvexHull.BiTruncatedTesseract
                     , ConvexHull.SnubDodecahedron.SnubDodecahedron
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
                     , pretty-show
                     , extra
                     , ilist
                     , hashable
                     , insert-ordered-containers
                     , random
                     , Unique
                     , vector-space
                     , toysolver
                     , data-default-class
                     , combinat
                     , permutation
                     , regex-compat
                     , regex-base
                     , regex-posix
  other-extensions:    ForeignFunctionInterface
                     , TypeFamilies
  default-language:    Haskell2010
  include-dirs:        C
  C-sources:           C/libqhull_r.c
                     , C/geom_r.c
                     , C/geom2_r.c
                     , C/global_r.c
                     , C/io_r.c
                     , C/mem_r.c
                     , C/merge_r.c
                     , C/poly_r.c
                     , C/poly2_r.c
                     , C/qset_r.c
                     , C/random_r.c
                     , C/usermem_r.c
                     , C/userprintf_r.c
                     , C/user_r.c
                     , C/stat_r.c
                     , C/delaunay.c
                     , C/convexhull.c
                     , C/utils.c
                     , C/halfspaces.c
  ghc-options:         -O0 -Wall

executable test_delaunay
  if flag(exe) || flag(exe-delaunay)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe/Delaunay
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , qhull
                     , pretty-show
                     , containers

executable test_voronoi
  if flag(exe) || flag(exe-voronoi)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe/Voronoi
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , qhull
                     , pretty-show
                     , containers
                     , ilist

executable test_convexhull
  if flag(exe) || flag(exe-hull)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe/ConvexHull
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , qhull
                     , pretty-show
                     , containers
                     , insert-ordered-containers
                     , combinat
                     , permutation
                     , ilist
                     , extra
                     , regex-compat
                     , regex-base
                     , regex-posix
  ghc-options:         -O0

executable test_halfspaces
  if flag(exe) || flag(exe-hs)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe/HalfSpaces
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , qhull
                     , pretty-show

source-repository head
  type:     git
  location: https://github.com/stla/qhull
